<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray"
    tools:context=".activities.RegistryProductActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextProductName"
        tools:layout_editor_absoluteX="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:autofillHints=""
        android:hint="@string/registry_product_name"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editTextProductDescription"
        tools:layout_editor_absoluteX="0dp"
        android:autofillHints=""
        android:hint="@string/registry_product_description"
        android:singleLine="true"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextProductName"
        app:layout_constraintVertical_bias="0.0"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:ems="10"
        android:id="@+id/editTextProductPrice"
        tools:layout_editor_absoluteX="0dp"
        android:autofillHints=""
        android:hint="@string/registry_product_price"
        android:singleLine="true"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextProductDescription"
        app:layout_constraintVertical_bias="0.0"/>

    <Spinner
        android:id="@+id/imageSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:ems="10"
        android:hint="@string/registry_product_image"
        android:singleLine="true"
        android:textSize="16sp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextProductPrice"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/registryProductButton"
        android:text="@string/registry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageSpinner"
        app:layout_constraintVertical_bias="0.28"
        app:backgroundTint="@color/colorGray"
        android:textColor="#000000"/>
</androidx.constraintlayout.widget.ConstraintLayout>