<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.UpdateProductActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstRowProductNameLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-4dp"
        app:layout_constraintVertical_bias="0.1">

        <TextView
            android:text="@string/item_product_admin_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textProductUpdateNameTextView"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:gravity="start"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            tools:ignore="RtlSymmetry"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_weight="2"
            android:padding="8dp"
            android:textSize="16sp"
            android:id="@+id/editTextProductUpdateName"
            tools:layout_editor_absoluteX="37dp"
            android:autofillHints=""
            android:hint="@string/update_name"
            android:singleLine="true"
            android:layout_marginRight="14dp"
            android:layout_marginEnd="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintTop_toTopOf="parent"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/secondRowProductDescriptionLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstRowProductNameLayout"
        tools:layout_editor_absoluteX="-29dp"
        app:layout_constraintVertical_bias="0.017">

        <TextView
            android:text="@string/item_product_admin_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textProductUpdateDescriptionTextView"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:gravity="start"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            tools:ignore="RtlSymmetry"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:layout_weight="2"
            android:padding="8dp"
            android:textSize="16sp"
            android:id="@+id/editTextProductUpdateDescription"
            tools:layout_editor_absoluteX="37dp"
            android:autofillHints=""
            android:hint="@string/update_description"
            android:singleLine="true"
            android:layout_marginRight="14dp"
            android:layout_marginEnd="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintTop_toTopOf="parent"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/thirdRowProductPriceLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondRowProductDescriptionLayout"
        tools:layout_editor_absoluteX="-29dp"
        app:layout_constraintVertical_bias="0.017">

        <TextView
            android:text="@string/item_product_admin_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textProductUpdatePriceTextView"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:gravity="start"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            tools:ignore="RtlSymmetry"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:layout_weight="2"
            android:padding="8dp"
            android:textSize="16sp"
            android:id="@+id/editTextProductUpdatePrice"
            tools:layout_editor_absoluteX="37dp"
            android:autofillHints=""
            android:hint="@string/update_price"
            android:singleLine="true"
            android:layout_marginRight="14dp"
            android:layout_marginEnd="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintTop_toTopOf="parent"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fourthRowProductImageLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thirdRowProductPriceLayout"
        tools:layout_editor_absoluteX="-29dp"
        app:layout_constraintVertical_bias="0.017">

        <TextView
            android:text="@string/item_product_admin_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textProductUpdateImageTextView"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:gravity="start"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            tools:ignore="RtlSymmetry"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:ems="10"
            android:layout_weight="2"
            android:padding="8dp"
            android:textSize="16sp"
            android:id="@+id/editTextProductUpdateImage"
            tools:layout_editor_absoluteX="37dp"
            android:autofillHints=""
            android:hint="@string/update_image"
            android:singleLine="true"
            android:layout_marginRight="14dp"
            android:layout_marginEnd="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintTop_toTopOf="parent"/>
    </LinearLayout>

    <Button
        android:id="@+id/updateButton"
        android:text="@string/update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        tools:layout_editor_absoluteX="85dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fourthRowProductImageLayout"
        app:layout_constraintVertical_bias="0.281"
        app:backgroundTint="@color/colorGray"
        android:textColor="#000000"/>

    <Button
        android:id="@+id/deleteButton"
        android:text="@string/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        tools:layout_editor_absoluteX="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateButton"
        app:layout_constraintVertical_bias="0.053"
        app:backgroundTint="@color/colorGray"
        android:textColor="#000000"/>

</androidx.constraintlayout.widget.ConstraintLayout>