<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLightGray"
        tools:context=".activities.UpdateAppointmentActivity">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/firstRowNameLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="-4dp"
            app:layout_constraintVertical_bias="0.1">

        <TextView
                android:text="@string/item_appointment_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textNameTextView"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:gravity="start"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                tools:ignore="RtlSymmetry"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:layout_weight="2"
                android:padding="8dp"
                android:textSize="16sp"
                android:id="@+id/editTextName"
                tools:layout_editor_absoluteX="37dp"
                android:autofillHints=""
                android:hint="@string/update_name"
                android:singleLine="true"
                android:layout_marginRight="14dp"
                android:layout_marginEnd="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.1"
                app:layout_constraintTop_toTopOf="parent"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/secondRowSurnameLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstRowNameLayout"
            tools:layout_editor_absoluteX="-29dp"
            app:layout_constraintVertical_bias="0.017">

        <TextView
                android:text="@string/item_appointment_surname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textSurnameTextView"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:gravity="start"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                tools:ignore="RtlSymmetry"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:layout_weight="2"
                android:padding="8dp"
                android:textSize="16sp"
                android:id="@+id/editTextSurname"
                tools:layout_editor_absoluteX="37dp"
                android:autofillHints=""
                android:hint="@string/update_surname"
                android:singleLine="true"
                android:layout_marginRight="14dp"
                android:layout_marginEnd="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.1"
                app:layout_constraintTop_toTopOf="parent"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/thirdRowEmailLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/secondRowSurnameLayout"
            tools:layout_editor_absoluteX="-29dp"
            app:layout_constraintVertical_bias="0.017">

        <TextView
                android:text="@string/item_appointment_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textEmailTextView"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:gravity="start"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                tools:ignore="RtlSymmetry"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:layout_weight="2"
                android:padding="8dp"
                android:textSize="16sp"
                android:id="@+id/editTextEmail"
                tools:layout_editor_absoluteX="37dp"
                android:autofillHints=""
                android:hint="@string/update_email"
                android:singleLine="true"
                android:layout_marginRight="14dp"
                android:layout_marginEnd="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.1"
                app:layout_constraintTop_toTopOf="parent"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fourthRowDateLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thirdRowEmailLayout"
            tools:layout_editor_absoluteX="-29dp"
            app:layout_constraintVertical_bias="0.017">

        <TextView
                android:text="@string/item_appointment_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textDateTextView"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:gravity="start"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                tools:ignore="RtlSymmetry"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:layout_weight="2"
                android:padding="8dp"
                android:textSize="16sp"
                android:id="@+id/editTextDate"
                tools:layout_editor_absoluteX="37dp"
                android:autofillHints=""
                android:hint="@string/update_date"
                android:singleLine="true"
                android:layout_marginRight="14dp"
                android:layout_marginEnd="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.1"
                app:layout_constraintTop_toTopOf="parent"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fifthRowDateLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fourthRowDateLayout"
            tools:layout_editor_absoluteX="-29dp"
            app:layout_constraintVertical_bias="0.017">

        <TextView
                android:text="@string/item_appointment_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textLocationTextView"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:gravity="start"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                tools:ignore="RtlSymmetry"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:layout_weight="2"
                android:padding="8dp"
                android:textSize="16sp"
                android:id="@+id/editTextLocation"
                tools:layout_editor_absoluteX="37dp"
                android:autofillHints=""
                android:hint="@string/update_location"
                android:singleLine="true"
                android:layout_marginRight="14dp"
                android:layout_marginEnd="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.1"
                app:layout_constraintTop_toTopOf="parent"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sixthRowDateLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fifthRowDateLayout"
            tools:layout_editor_absoluteX="-29dp"
            app:layout_constraintVertical_bias="0.035">

        <TextView
                android:text="@string/item_appointment_state"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textStateTextView"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:gravity="start"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                tools:ignore="RtlSymmetry"/>

        <Spinner
                android:id="@+id/stateSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_weight="2"
                android:hint="@string/update_state"
                tools:layout_editor_absoluteX="0dp"
                android:singleLine="true"
                android:textSize="16sp"
                android:layout_marginRight="14dp"
                android:layout_marginEnd="14dp"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.1"/>
    </LinearLayout>

    <Button
            android:id="@+id/updateButton"
            android:text="@string/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            tools:layout_editor_absoluteX="85dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sixthRowDateLayout"
            app:layout_constraintVertical_bias="0.281"
            app:backgroundTint="@color/colorGray"
            android:textColor="#000000"/>

    <Button
            android:id="@+id/deleteButton"
            android:text="@string/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            tools:layout_editor_absoluteX="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateButton"
            app:layout_constraintVertical_bias="0.053"
            app:backgroundTint="@color/colorGray"
            android:textColor="#000000"/>
</androidx.constraintlayout.widget.ConstraintLayout>