<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.AudioActivity">

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="450dp"
            android:contentDescription="@string/image_content_description"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <Button
            android:text="@string/btn_rec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_rec"
            android:onClick="recordAudio"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.801"
            app:layout_constraintVertical_bias="0.24"/>

    <Button
            android:text="@string/btn_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_play"
            android:onClick="playAudio"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintVertical_bias="0.24"/>

</androidx.constraintlayout.widget.ConstraintLayout>