<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLightGray"
        tools:context=".activities.RegistryActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/productTextView"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.057"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextName"
            tools:layout_editor_absoluteX="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:autofillHints=""
            android:hint="@string/registry_name"
            android:singleLine="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productTextView"
            app:layout_constraintVertical_bias="0.06"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextSurname"
            tools:layout_editor_absoluteX="0dp"
            android:autofillHints=""
            android:hint="@string/registry_surname"
            android:singleLine="true"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextName"
            app:layout_constraintVertical_bias="0.0"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:ems="10"
            android:id="@+id/editTextEmail"
            tools:layout_editor_absoluteX="0dp"
            android:autofillHints=""
            android:hint="@string/registry_email"
            android:singleLine="true"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextSurname"
            app:layout_constraintVertical_bias="0.0"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:focusable="false"
            android:maxLines="1"
            android:ems="10"
            android:id="@+id/editTextDate"
            tools:layout_editor_absoluteX="0dp"
            android:autofillHints=""
            android:hint="@string/registry_date"
            android:singleLine="true"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
            app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:id="@+id/registryButton"
            android:text="@string/registry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            tools:layout_editor_absoluteX="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDate"
            app:layout_constraintVertical_bias="0.28" app:backgroundTint="@color/colorGray"
            android:textColor="#000000"/>

</androidx.constraintlayout.widget.ConstraintLayout>